[workspace]
resolver = "2"
members = ["api", "program", "cli"]

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://ore.supply"
description = "ORE liquid staking token."
documentation = "https://docs.rs/ore-lst-api/latest/ore_lst_api/"
repository = "https://github.com/regolith-labs/ore-lst"
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3.3"
bytemuck = "1.14.3"
mpl-token-metadata = "5.1.1"
num_enum = "0.7.2"
ore-lst-api = { path = "./api" }
ore-mint-api = "0.1.3"
ore-stake-api = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
solana-program = "^2.1"
solana-client = "^2.1"
solana-sdk = "^2.1"
solana-security-txt = "1.1.2"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^6", features = [ "no-entrypoint" ] } 
steel = { features = ["spl"], version = "4.0.9" }
thiserror = "1.0.57"
tokio = { version = "1.37.0", features = ["full"] }

[profile.release]
overflow-checks = true

[profile.dev]
overflow-checks = true