[package]
name = "ore-lst-api"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
bytemuck.workspace = true
mpl-token-metadata = "5.1.1"
num_enum.workspace = true
ore-mint-api.workspace = true
ore-stake-api.workspace = true
serde.workspace = true
solana-program.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
steel.workspace = true
thiserror.workspace = true
