[package]
name = "ore-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
bincode = "1.3.3"
ore-lst-api = { path = "../api" }
ore-mint-api.workspace = true
ore-stake-api.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
spl-token.workspace = true
steel.workspace = true
tokio.workspace = true
