[package]
name = "ore-lst-program"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "ore_lst"

[features]
default = []

[dependencies]
mpl-token-metadata.workspace = true
ore-lst-api.workspace = true
ore-mint-api.workspace = true
ore-stake-api.workspace = true
solana-program.workspace = true
solana-security-txt.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
steel.workspace = true

